--- a/content/projects/datasets/hansard-data/_index.html
+++ b/content/projects/datasets/hansard-data/_index.html
@@ -1,6 +1,5 @@
 ---
 title: Hansard Speeches and Sentiment V2.5.0
-date: "2018-02-24"
 bibliography: [references.bib]
 link-citations: true
 ---
@@ -412,13 +411,21 @@ link-citations: true
 <h2>Citing this dataset</h2>
 <p>Please cite this dataset as:</p>
 <p>Odell, Evan. (2017). “Hansard Speeches and Sentiment V2.5.0 [Dataset].” <a href="https://doi.org/10.5281/zenodo.1183893">10.5281/zenodo.1183893</a>.</p>
+<pre><code>@article{odell2018,
+  title = {Hansard {{Speeches}} and {{Sentiment V2}}.5.0 [Dataset]},
+  url = {https://evanodell.com/projects/datasets/hansard-data/},
+  doi = {10.5281/zenodo.1183893},
+  date = {2018-02-24},
+  keywords = {dataset},
+  author = {Odell, Evan}
+}</code></pre>
 <p>The DOI of V2.5.0 is <em>10.5281/zenodo.1183893</em>. The DOI for all versions is <a href="https://doi.org/10.5281/zenodo.780985"><em>10.5281/zenodo.780985</em></a>, and will always resolve to the latest version of the Hansard Speeches and Sentiment dataset.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
 <div id="refs" class="references">
 <div id="ref-cambria2016">
-<p>Cambria, Erik, Soujanya Poria, Rajiv Bajpai, and Björn Schuller. 2016. “SenticNet 4: A Semantic Resource for Sentiment Analysis Based on Conceptual Primitives.” In, 2666–77.</p>
+<p>Cambria, Erik, Soujanya Poria, Rajiv Bajpai, and Björn Schuller. 2016. “SenticNet 4: A Semantic Resource for Sentiment Analysis Based on Conceptual Primitives.” In, 2666–77. <a href="http://sentic.net/senticnet-4.pdf" class="uri">http://sentic.net/senticnet-4.pdf</a>.</p>
 </div>
 <div id="ref-hu2004">
 <p>Hu, Minqing, and Bing Liu. 2004. “Mining and Summarizing Customer Reviews.” In <em>Proceedings of the Tenth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</em>, 168–77. ACM. <a href="http://dl.acm.org/citation.cfm?id=1014073" class="uri">http://dl.acm.org/citation.cfm?id=1014073</a>.</p>
