--- a/content/projects/datasets/hansard-data/_index.html
+++ b/content/projects/datasets/hansard-data/_index.html
@@ -2,7 +2,7 @@
 title: "Hansard Speeches 1979--2018 V2.6.0"
 bibliography: references.bib
 link-citations: yes
-aliases: /datasets/hansard-data
+aliases: ["/datasets/hansard-data", "/projects/hansard-data"]
 ---
 
 
