--- a/content/projects/datasets/hansard-data/_index.html
+++ b/content/projects/datasets/hansard-data/_index.html
@@ -1,219 +1,148 @@
 ---
-title: "Hansard Speeches 1979--2018 V2.6.0"
-bibliography: references.bib
-link-citations: yes
-aliases: ["/datasets/hansard-data", "/projects/hansard-data"]
+title: "Hansard Speeches 1979--2020 Version 3"
+aliases: ["/datasets/hansard-data", "/projects/hansard-data", "/hansard-data"]
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="download-from-zenodo" class="section level2">
-<h2><a href="http:doi.org/10.5281/zenodo.780985">Download from Zenodo</a></h2>
-<p>A public dataset of speeches in the Hansard, stored as a CSV, and as a <a href="https://cran.r-project.org/package=tibble">tibble</a> class in RDS files, for the <a href="https://cran.r-project.org/">R programming language</a>.<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> It includes the text and sentiment classifications for every speech made in the House of Commons between the 1979 general election and the end of 2017, with information on the speaking MP, their party, gender, birth date,<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a> starting and finishing dates (if applicable) as an MP, and age at the time of the speech. For pre-1979 election data, please see <a href="https://evanodell.com/projects/datasets/hansard-data/archive/V250">here</a>. Documentation for previous versions of the dataset including sentiment calculations can be found <a href="https://evanodell.com/projects/datasets/hansard-data/archive/">here</a></p>
-<p>It can be accessed through <a href="https://zenodo.org/record/1183893">Zenodo</a>, and is distributed under a Creative Commons 4.0 BY-SA license. The latest version expands coverage to the end of 2018, and includes information on cabinet and shadow cabinet positions.</p>
+<h2><a href="https://doi.org/10.5281/zenodo.4061741">Download from Zenodo</a></h2>
+<p>Version 3 is a major update of this dataset, with the following changes:</p>
+<ul>
+<li><p>Coverage up to the end of August 2020</p></li>
+<li><p>More information on government, opposition and parliamentary posts.</p></li>
+<li><p>Information on MPs constituencies.</p></li>
+<li><p>Inclusion of topical debate headings from the Hansard record</p></li>
+<li><p>Removal of easily accessible information like birthdays from the flat file.</p></li>
+<li><p>Fixes to various encoding issues.</p></li>
+</ul>
+<div id="file-formats" class="section level3">
+<h3>File formats</h3>
+<p>The data is available as a <a href="https://tibble.tidyverse.org/"><code>tibble</code></a>-format .rds file for the R programming language, and as a CSV/JSON dataset.</p>
+<p>The CSV file does not contain the “government_posts”, “opposition_posts” and “parliamentary_posts” variables, those are available in the JSON files of the same name. This is due to the data structure which is not compatible with the flat file CSVs. Some MPs have multiple posts at once, which are in list columns. Eg:</p>
+<pre><code>[
+  {
+    &quot;mnis_id&quot;: &quot;177&quot;,
+    &quot;date&quot;: &quot;2008-10-06&quot;,
+    &quot;government_posts&quot;: [
+      {
+        &quot;gov_post_name&quot;: &quot;Minister of State (Department for Business, Enterprise and Regulatory Reform) (Trade, Investment and Consumer Affairs) (also Department for International Development)&quot;
+      },
+      {
+        &quot;gov_post_name&quot;: &quot;Minister of State (Department for International Development)&quot;
+      }
+    ]
+  }
+]</code></pre>
+</div>
 <div id="dataset-variables" class="section level3">
 <h3>Dataset Variables</h3>
 <table>
-<colgroup>
-<col width="36%" />
-<col width="28%" />
-<col width="36%" />
-</colgroup>
 <thead>
 <tr class="header">
 <th>Variable</th>
 <th>Description</th>
-<th>Data Type</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td><code>pp_id</code></td>
-<td>ID for each speech, corresponding to the parlparse ID</td>
-<td>character</td>
+<td>“id”</td>
+<td>The ID as assigned by mysociety</td>
 </tr>
 <tr class="even">
-<td><code>eo_id</code></td>
-<td>ID number for each speech, as assigned by me, to accommodate situations where the same parlparse ID was assigned to distinct speeches</td>
-<td>character</td>
+<td>“speech”</td>
+<td>The text of the speech</td>
 </tr>
 <tr class="odd">
-<td><code>speech</code></td>
-<td>The actual text of the speech</td>
-<td>character</td>
+<td>“display_as”</td>
+<td>The standardised name of the MP.</td>
 </tr>
 <tr class="even">
-<td><code>word_count</code></td>
-<td>The word count of the speech</td>
-<td>numeric</td>
+<td>“party”</td>
+<td>The party an MP is member of at time of speech</td>
 </tr>
 <tr class="odd">
-<td><code>speech_date</code></td>
-<td>The date the speech was made</td>
-<td>date</td>
+<td>“constituency”</td>
+<td>Constituency represented by MP at time of</td>
 </tr>
 <tr class="even">
-<td><code>year</code></td>
-<td>The year the speech was made</td>
-<td>numeric</td>
+<td>“mnis_id”</td>
+<td>The MP’s Members Name Information Service number</td>
 </tr>
 <tr class="odd">
-<td><code>time</code></td>
-<td>The time the speech was made (not consistently available), stored as a character vector; e.g. ‘16:24:00’</td>
-<td>character</td>
+<td>“date”</td>
+<td>Date of speech</td>
 </tr>
 <tr class="even">
-<td><code>url</code></td>
-<td>The URL of the speech</td>
-<td>character</td>
+<td>“time”</td>
+<td>Time of speech</td>
 </tr>
 <tr class="odd">
-<td><code>as_speaker</code></td>
-<td>If the speaker is the Speaker of the house</td>
-<td>Logical</td>
+<td>“colnum”</td>
+<td>Column number in hansard record</td>
 </tr>
 <tr class="even">
-<td><code>speaker_id</code></td>
-<td>One of three ID schemes used in the <a href="https://github.com/mysociety/parlparse"><code>parlparse</code></a> scraper</td>
-<td>character</td>
+<td>“speech_class”</td>
+<td>Type of speech</td>
 </tr>
 <tr class="odd">
-<td><code>person_id</code></td>
-<td>One of three ID schemes used in the <a href="https://github.com/mysociety/parlparse"><code>parlparse</code></a> scraper</td>
-<td>character</td>
+<td>“major_heading”</td>
+<td>Major debate heading</td>
 </tr>
 <tr class="even">
-<td><code>hansard_membership_id</code></td>
-<td>One of three ID schemes used in the <a href="https://github.com/mysociety/parlparse"><code>parlparse</code></a> scraper</td>
-<td>character</td>
+<td>“minor_heading”</td>
+<td>Minor debate heading</td>
 </tr>
 <tr class="odd">
-<td><code>mnis_id</code></td>
-<td>The ID used by the Member’s Names Information Service. This ID remains constant, even if an MP changes parties, seats, etc.</td>
-<td>character</td>
+<td>“oral_heading”</td>
+<td>Oral debate heading</td>
 </tr>
 <tr class="even">
-<td><code>dods_id</code></td>
-<td>Dods Monitoring ID</td>
-<td>integer</td>
+<td>“year”</td>
+<td>Year of speech</td>
 </tr>
 <tr class="odd">
-<td><code>pims_id</code></td>
-<td>Parliamentary Information Management Services ID</td>
-<td>integer</td>
+<td>“hansard_membership_id”</td>
+<td>ID used by mysociety</td>
 </tr>
 <tr class="even">
-<td><code>proper_name</code></td>
-<td>The MP’s name</td>
-<td>character</td>
+<td>“speakerid”</td>
+<td>ID used by mysociety</td>
 </tr>
 <tr class="odd">
-<td><code>party_group</code></td>
-<td>Grouping of political parties. Labour and Labour Co-op MPs are listed as ‘Labour’, Conservative MPs as ‘Conservative’, Liberal Democrats, Social Democrats and Liberals are all listed as ‘Liberal Democrat’, and all other MPs are listed as ‘Other’.</td>
-<td>factor</td>
+<td>“person_id”</td>
+<td>ID used by mysociety</td>
 </tr>
 <tr class="even">
-<td><code>party</code></td>
-<td>The political party the MP belonged to at time of speech</td>
-<td>character</td>
+<td>“speakername”</td>
+<td>MP name as appeared in Hansard record for speech</td>
 </tr>
 <tr class="odd">
-<td><code>government</code></td>
-<td>An indicator if the the MP is a member of the governing party (or parties), or in the opposition</td>
-<td>factor</td>
+<td>“url”</td>
+<td>link to speech</td>
 </tr>
 <tr class="even">
-<td><code>age</code></td>
-<td>Age at time of speech</td>
-<td>integer</td>
+<td>“government_posts”</td>
+<td>Government posts held by MP (list-column)</td>
 </tr>
 <tr class="odd">
-<td><code>gender</code></td>
-<td>One of Male or Female</td>
-<td>factor</td>
+<td>“opposition_posts”</td>
+<td>Opposition posts held by MP (list-column)</td>
 </tr>
 <tr class="even">
-<td><code>date_of_birth</code></td>
-<td>MP’s date of birth</td>
-<td>date</td>
-</tr>
-<tr class="odd">
-<td><code>house_start_date</code></td>
-<td>The date the MP was first elected to the House of Commons</td>
-<td>date</td>
-</tr>
-<tr class="even">
-<td><code>house_end_date</code></td>
-<td>The date the MP left the House of Commons</td>
-<td>date</td>
-</tr>
-<tr class="odd">
-<td><code>ministry</code></td>
-<td>Identifier for the government at time of speech</td>
-<td>character</td>
-</tr>
-<tr class="even">
-<td><code>speaker_office</code></td>
-<td>Empty variable</td>
-<td>character</td>
-</tr>
-<tr class="odd">
-<td><code>match</code></td>
-<td>Ignore</td>
-<td>factor</td>
-</tr>
-<tr class="even">
-<td><code>y_since_start</code></td>
-<td>Years since first elected</td>
-<td>numeric</td>
-</tr>
-<tr class="odd">
-<td><code>short_list</code></td>
-<td>If female Labour MP, elected through All Women Shortlist</td>
-<td>logical</td>
-</tr>
-<tr class="even">
-<td><code>post_name</code></td>
-<td>Cabinet or shadow cabinet role, if available</td>
-<td>character</td>
+<td>“parliamentary_posts”</td>
+<td>Parliamentary posts held by MP (list-column)</td>
 </tr>
 </tbody>
 </table>
 </div>
+<div id="notes" class="section level3">
+<h3>Notes</h3>
+<p>The data used to create this dataset was taken from the <a href="https://github.com/mysociety/parlparse">parlparse</a> project by <a href="https://www.mysociety.org/">mySociety</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This dataset is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p>Please contact me if you find any errors in the dataset. The integrity of the public Hansard record is questionable at times, and while I have improved it, the data is presented ‘as is’.</p>
+<p>The code used to create this dataset is on <a href="https://github.com/evanodell/hansard-data3">Github</a> and is available under a GPL-3.0 License.</p>
+<p>Previous documentation is available in the <a href="%22/archive%22">archive</a>.</p>
 </div>
-<div id="methodology" class="section level2">
-<h2>Methodology</h2>
-<p>The <a href="https://github.com/mysociety/parlparse">parlparse</a> project provides scraped xml files of Hansard debate going back to 1936, and assigns an ID to each speaker. However, I could not find where the IDs assigned are linked to other information, such as constituencies or parties, or the MNIS ID system used by parliament. Long-serving MPs may also have dozens of these IDs assigned to them, and they are not consistently linked together. There are also substantial numbers of speeches where there is no ID assigned a speaker, and they are classified as ‘unknown’. I created a table with every possible combination of name and <code>speaker_id</code>, <code>person_id</code> and <code>hansard_membership_id</code>, and matched the speakers in that table to their MNIS ID, using a mixture of exact string, manually checked approximate strings and manual matching/hand coding. The information in this table was then matched to the complete list of speech IDs. In the case of common names,<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a> I manually identified which MP was actually speaking by locating adjacent Hansard records where their full name, constituency or ministerial title was used. In a handful of cases I had to use the content of their speech and any adjacent speeches to provide further clues to an MPs identity.</p>
-<div id="licences-and-code" class="section level3">
-<h3>Licences and Code</h3>
-<p>The data used to create this dataset was taken from the <a href="https://github.com/mysociety/parlparse">parlparse</a> project operated by <a href="https://www.theyworkforyou.com/">They Work For You</a> and supported by <a href="https://www.mysociety.org/">mySociety</a>.</p>
-<p>The dataset is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png"/></a></p>
-<p>The code included in the GitHub repository used to create this dataset is licensed under an <a href="https://github.com/EvanOdell/hansard-speeches-and-sentiment/blob/master/LICENSE">MIT license</a>. The code used to generate this dataset is available on <a href="https://github.com/EvanOdell/hansard-data">Github</a>.</p>
-<p>Please <a href="mailto:evanodell91@gmail.com">contact me</a> if you find any errors in the dataset. The integrity of the public Hansard record is questionable at times, and while I have improved it, the data is presented ‘as is’.</p>
-</div>
-</div>
-<div id="citing-this-dataset" class="section level2">
-<h2>Citing this dataset</h2>
-<p>Please cite this dataset as:</p>
-<p>Odell, Evan. (2019). “Hansard Speeches V2.6.0 [Dataset].” <a href="https://doi.org/10.5281/zenodo.2537227">10.5281/zenodo.2537227</a>.</p>
-<pre><code>@article{odell2019,
-  title = {Hansard {{Speeches V2}}.6.0 [Dataset]},
-  url = {https://evanodell.com/projects/datasets/hansard-data/},
-  doi = {10.5281/zenodo.2537227},
-  date = {2019-01-11},
-  keywords = {dataset},
-  author = {Odell, Evan}
-}</code></pre>
-<p>The DOI of V2.6.0 is <em>10.5281/zenodo.2537227</em>. The DOI for all versions is <a href="https://doi.org/10.5281/zenodo.780985"><em>10.5281/zenodo.780985</em></a>, and will always resolve to the latest version of the Hansard Speeches and Sentiment dataset.</p>
-</div>
-<div id="references" class="section level2">
-<h2>References</h2>
-</div>
-<div class="footnotes">
-<hr />
-<ol>
-<li id="fn1"><p>If you would like other formats please <a href="mailto:evanodell91@gmail.com">get in touch</a>.<a href="#fnref1" class="footnote-back">↩</a></p></li>
-<li id="fn2"><p>Sarah Olney (mnis_id 4591) does not have a birth date listed in the Members Names Information Service, and I have been unable to locate her date of birth elsewhere, only the year of birth. Her birthdate is, as a consequence, listed as 1977-01-01, this will be amended to the correct month and day if her biography is updated. Several members (Gillian Keegan, Laura Smith, Mike Hill) still do not have birth dates listed at all, and I could not locate exact dates for Anna McMorrin, Bob Seely, Danielle Rowley, Fiona Onasanya, Kemi Badenoch, so listed their birthday as the first of the given year or month. This will be updated in future versions of this data set.<a href="#fnref2" class="footnote-back">↩</a></p></li>
-<li id="fn3"><p>e.g. the two Labour MPs named John Smith who were both members of the house between 1989 and 1992.<a href="#fnref3" class="footnote-back">↩</a></p></li>
-</ol>
 </div>
