--- a/content/projects/datasets/hansard-data/_index.html
+++ b/content/projects/datasets/hansard-data/_index.html
@@ -143,6 +143,6 @@ aliases: ["/datasets/hansard-data", "/projects/hansard-data", "/hansard-data"]
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This dataset is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Please contact me if you find any errors in the dataset. The integrity of the public Hansard record is questionable at times, and while I have improved it, the data is presented ‘as is’.</p>
 <p>The code used to create this dataset is on <a href="https://github.com/evanodell/hansard-data3">Github</a> and is available under a GPL-3.0 License.</p>
-<p>Previous documentation is available in the <a href="%22/archive%22">archive</a>.</p>
+<p>Previous documentation is available in the <a href="/archive">archive</a>.</p>
 </div>
 </div>
