--- a/content/projects/datasets/hansard-data/_index.html
+++ b/content/projects/datasets/hansard-data/_index.html
@@ -1,5 +1,5 @@
 ---
-title: "Hansard Speeches 1979--2020 Version 3"
+title: "Hansard Speeches 1979-2020 Version 3.0.1"
 aliases: ["/datasets/hansard-data", "/projects/hansard-data", "/hansard-data"]
 ---
 
@@ -7,7 +7,11 @@ aliases: ["/datasets/hansard-data", "/projects/hansard-data", "/hansard-data"]
 
 
 <div id="download-from-zenodo" class="section level2">
-<h2><a href="https://doi.org/10.5281/zenodo.4061741">Download from Zenodo</a></h2>
+<h2><a href="https://doi.org/10.5281/zenodo.780985">Download from Zenodo</a></h2>
+<p>A dataset containing every speech in the House of Commons from May 1979-July 2020.</p>
+</div>
+<div id="version-3.0.1" class="section level2">
+<h2>Version 3.0.1</h2>
 <p>Version 3 is a major update of this dataset, with the following changes:</p>
 <ul>
 <li><p>Coverage up to the end of August 2020</p></li>
